trying to get codeblocks working properly

--- a/layouts/partials/secheader.html
+++ b/layouts/partials/secheader.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.min.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/webmention.css" />
+  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/syntax.css" />
   <!-- indieweb components -->
   <link rel="pingback" href="https://webmention.io/ascraeus.org/xmlrpc" />
   <link rel="webmention" href="https://webmention.io/ascraeus.org/webmention" />
