--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -4,7 +4,7 @@
 		<header>
 			<nav>
 				<div id="sitetitle">
-				<h1><a href="{{ .Site.BaseURL }}">View&nbsp;from<span class="hidden">&nbsp;&nbsp;<br /></span> <span class="ochre">Ascraeus</span></a></h1>
+				<h1><a href="{{ .Site.BaseURL }}">View&nbsp;from<span class="hidden">&nbsp;&nbsp;<br /></span> <span class="ochre">ASCRAEUS</span></a></h1>
 				</div>
 				{{- if .Site.Author.name }}
 				<ul>
