--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -32,6 +32,7 @@
        –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/reproach.min.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/bigfoot-default.css" />
+  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/syntax.css" />
   <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/webmention.css" />
   <!-- indieweb components -->
   <link rel="pingback" href="https://webmention.io/ascraeus.org/xmlrpc" />
