+added: xml-rpc gateway

--- a/layouts/partials/indexheader.html
+++ b/layouts/partials/indexheader.html
@@ -46,6 +46,7 @@
   <link rel="token_endpoint" href="https://tokens.indieauth.com/token" />
   <link rel="micropub" href="https://ascraeus.org/nanopub.php" />
   <link rel="microsub" href="https://greyarea.ascraeus.org/microsub/1" />
+  <link rel="EditURI" type="application/rsd+xml" title="RSD" href="https://xmlrpc.p3k.io/ascraeus.org/xmlrpc?rsd" />
   <!-- rss feeds -->
   <link rel="alternate" type="application/atom+xml" title="Ascraeus Main Feed" href="{{ .Site.BaseURL }}index.xml" />
   <link rel="alternate" type="application/atom+xml" title="Ascraeus Micropost Feed" href="{{ .Site.BaseURL }}micro/index.xml" />
