Move to using Morris for webmentions

--- a/layouts/like/single.html
+++ b/layouts/like/single.html
@@ -13,7 +13,7 @@
 			</article>
 			{{ partial "articlepagination.html" . }}
 			{{ partial "mention.html" . }}
-			{{ partial "webmention.html" }}
+			{{ partial "webmention.html" . }}
 	</content>
 
 {{ partial "footer.html" . }} 
