--- a/layouts/review/single.html
+++ b/layouts/review/single.html
@@ -22,6 +22,6 @@
 		
 	{{ partial "articlepagination.html" . }}
 	{{ partial "mention.html" . }}
-	{{ partial "webmention.html" }}
+	{{ partial "webmention.html" . }}
 	</content>
 {{ partial "footer.html" . }}
