Move to Morris for Webmentions

--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -9,7 +9,7 @@
 		  </div>
 		</article>
 
-{{ partial "webmention.html" }} 
+{{ partial "webmention.html" . }} 
 	</content>
 
 {{ partial "footer.html" . }}
