--- a/layouts/page/tbr.html
+++ b/layouts/page/tbr.html
@@ -17,7 +17,7 @@
 		</article>
 
 	{{ partial "mention.html" . }}
-	{{ partial "webmention.html" }}
+	{{ partial "webmention.html" . }}
 	</content>
 	<script type="text/javascript" src="{{ .Site.BaseURL }}js/bookcurrent.js"></script>
 	<script type="text/javascript" src="{{ .Site.BaseURL }}js/booklist.js"></script>
