--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -82,7 +82,7 @@
                 {{- end }}
             </div>
 
-		<p class="feet">{{ .Site.Title }} &copy; <a href={{ .Site.BaseURL }} class="metatag">{{ .Site.Author.name }}</a><a class="metatag" href="mailto:dgold@ascraeus.org">{{ .Site.Author.nick }}</a> 2011-{{ now.Format "2006" }} &bull; Licenced under <a href="{{ .Site.BaseURL }}page/licence" class="metatag">CC-BY-NC-SA</a> </p>
+		<p class="feet">{{ .Site.Title }} &copy; <a href={{ .Site.BaseURL }} class="metatag">{{ .Site.Author.name }}</a><a class="metatag" href="mailto:dgold@ascraeus.org">{{ .Site.Author.nick }}</a> 2011-{{ now.Format "2006" }} &bull; Licenced under <a href="{{ .Site.BaseURL }}page/licence" class="metatag">CC-BY-NC-SA</a> &bull; <a href="{{ .Site.BaseURL }}page/privacy" class="metatag">Privacy Policy</a></p>
 	</footer>
 </body>
 </html>
