--- a/layouts/micro/micropubpost.html
+++ b/layouts/micro/micropubpost.html
@@ -24,7 +24,7 @@
 			</article>
 			{{ partial "articlepagination.html" . }}
 			{{ partial "mention.html" . }}
-			{{ partial "webmention.html" }}
+			{{ partial "webmention.html" . }}
 	</content>
 
 {{ partial "footer.html" . }} 
