--- a/layouts/partials/wm_like.html
+++ b/layouts/partials/wm_like.html
@@ -1,12 +1,4 @@
-{{- if "wm-property" "like-of" }}
 <li class="webmention-interaction-like">
-      <a class="webmention-interaction-presentation" href="{{ .url }}" title="{{ .author.name }} liked this on {{ dateFormat "02/01/06" .published }}">
-          <span><img class="avatar" src="{{ .author.photo }}">"{{ .author.name }} liked this on {{ dateFormat "02/01/06" .published }}"/></span>::after</a>
+      <a class="webmention-interaction-presentation" href="{{ .url }}" title="{{ .author.name }} liked this on {{ dateFormat "2006-01-02" (time .published) }}">
+          <span><img class="avatar" src="{{ .author.photo }}">{{ .author.name }} liked this on {{ dateFormat "2006-01-02" (time .published) }}</span></a>
 </li>
-{{- end }}
-{{- if "wm-property" "repost-of" }}
-<li class="webmention-interaction-repost">
-    <a class="webmention-interaction-presentation" href="{{ .url }}" title="{{ .author.name }} reposted this on {{ dateFormat "02/01/06" .published }}">
-        <span><img class="avatar" src="{{ .author.photo }}">"{{ .author.name }} reposted this on {{ dateFormat "02/01/06" .published }}"/></span>::after</a>
-</li>
-{{- end }}
